[package]
name = "regls"
version = "0.1.0"
edition = "2018"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
description = "List contents of Windows Registry files"
homepage = "https://github.com/janstarke/regls"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
anyhow = "1.0"
simplelog = "0.10"
chrono = "0.4"
log = "0.4"
rwinreg = { git = "https://github.com/janstarke/r-winreg.git", branch="feature/winstructs", version="0.2.0-janstarke.2" }